[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-concurrency-safe"
version = "0.0.2"
description = "Concurrency guard for Django using PostgreSQL advisory locks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Aslı Kök" }
]
keywords = ["django", "postgres", "advisory-lock", "locking", "concurrency", "race-condition"]
dependencies = [
  "Django>=4.2",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/imgeaslikok/django-concurrency-safe"
Repository = "https://github.com/imgeaslikok/django-concurrency-safe"
Issues = "https://github.com/imgeaslikok/django-concurrency-safe/issues"

[project.optional-dependencies]
test = [
  "pytest>=8",
  "psycopg[binary]>=3.1",
]
dev = [
  "ruff>=0.6",
  "mypy>=1.10",
  "build>=1.2",
  "twine>=5.1",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]